Add: slider section, footer with additional information

--- a/singolo1.html
+++ b/singolo1.html
@@ -4,16 +4,127 @@
         <meta charset="utf-8">
         <title>SINGOLO</title>
         <link rel="stylesheet" href="singolo1.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
-            
+        <header class="navigation_section">
+            <nav class="navigation_container"> 
+                <div class="logo_name">
+                    <h1>SINGOLO</h1>
+                    <div>*</div>
+                </div>
+                <ul class="navigation_list">
+                    <li class="navigation_list-home"><a href="#">HOME</a></li>
+                    <li><a href="#">SERVICES</a></li>
+                    <li><a href="#">PORTFOLIO</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </nav>
         </header>
-        <main>
-
+        <main class="main_section-images">
+            <section class="main_section-slides">
+                <figure class="left_arrow_section">
+                    <img src="./assets/chev.png" alt="chev" class="main-section_left-arrow">
+                </figure>
+                <figure class="main-section-phones">
+                    <img src="./assets/iPhone123.png" alt="asd">
+                </figure>
+                <figure class="righ_arrow-section">
+                    <img src="./assets/chevright.png" class="main-section_right-arrow">
+                </figure>     
+            </section>  
         </main>
         <footer>
-
+            <div class="services_main">
+                <div class="service_container">
+                    <h2>Our Services</h2>
+                    <article>
+                        <p>
+                            Fusce dapibus, tellus ac cursus commodo, 
+                            tortor mauris condimentum. Duis mollis, 
+                            non commodo luctus, nisi erat porttitor ligula, 
+                            eget lacinia odio sem nec elit. Fusce dapibus, 
+                            tellus ac cursus commodo, tortor mauris condimentum 
+                            nibh.
+                        </p>
+                    </article>
+                </div>
+                <div class="service_section">
+                    <ul class="service_section-list">
+                        <li>
+                            <img src="./assets/pen.png" alt="Pen">
+                            <div>
+                                <h3>Custom Design</h3>
+                                <p>
+                                    Curabitur vestibulum eget mauris quis laoreet. 
+                                    Phasellus in quam laoreet, viverra lacus ut, 
+                                    ultrices velit.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./assets/idea.png" alt="idea">
+                            <div>
+                                <h3>Inovative ideas</h3>
+                                <p>
+                                    Quisque luctus, quam eget molestie commodo, 
+                                    lacus purus cursus purus, nec rutrum tellus dolor 
+                                    id lorem.
+                                </p>
+                            </div>
+                        </li>   
+                        <li>
+                            <img src="./assets/heart.png" alt="heart">
+                            <div>
+                                <h3>Love is Answer</h3>
+                                <p>
+                                    Nulla sed nunc et tortor luctus faucibus.
+                                    Morbi at aliquet turpis, 
+                                    et consequat felis.
+                                    Quisque condimentum.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./assets/phone.png" alt="phone">
+                            <div>
+                                <h3>Responsive Layout</h3>
+                                <p>
+                                    Sed porttitor placerat rhoncus. 
+                                    In at nunc tellus. 
+                                    Maecenas blandit nunc ligula. 
+                                    Praesent elit leo.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./assets/chat.png" alt="chat">
+                            <div>
+                                <h3>24/7 Support</h3>
+                                <p>
+                                    Vivamus vel quam lacinia, 
+                                    tincidunt dui non, 
+                                    vehicula nisi. 
+                                    Nulla a sem erat. 
+                                    Pellentesque egestas venenatis lorem .
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./assets/star.png" alt="star">
+                            <div>
+                                <h3>Feel Like A Star</h3>
+                                <p>
+                                    Quisque hendrerit purus dapibus, 
+                                    ornare nibh vitae, viverra nibh. 
+                                    Fusce vitae aliquam tellus.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
