--- a/singolo1.html
+++ b/singolo1.html
@@ -34,97 +34,260 @@
                     <img src="./assets/chevright.png" class="main-section_right-arrow">
                 </figure>     
             </section>  
-        </main>
-        <footer>
-            <div class="services_main">
-                <div class="service_container">
-                    <h2>Our Services</h2>
-                    <article>
-                        <p>
-                            Fusce dapibus, tellus ac cursus commodo, 
-                            tortor mauris condimentum. Duis mollis, 
-                            non commodo luctus, nisi erat porttitor ligula, 
-                            eget lacinia odio sem nec elit. Fusce dapibus, 
-                            tellus ac cursus commodo, tortor mauris condimentum 
-                            nibh.
-                        </p>
-                    </article>
+            <section class="service_box">
+                <div class="services_main">
+                    <div class="service_container">
+                        <h2>Our Services</h2>
+                        <article>
+                            <p>
+                                Fusce dapibus, tellus ac cursus commodo, 
+                                tortor mauris condimentum. Duis mollis, 
+                                non commodo luctus, nisi erat porttitor ligula, 
+                                eget lacinia odio sem nec elit. Fusce dapibus, 
+                                tellus ac cursus commodo, tortor mauris condimentum 
+                                nibh.
+                            </p>
+                        </article>
+                    </div>
+                    <div class="service_section">
+                        <ul class="service_section-list">
+                            <li>
+                                <img src="./assets/pen.png" alt="Pen">
+                                <div>
+                                    <h3>Custom Design</h3>
+                                    <p>
+                                        Curabitur vestibulum eget mauris quis laoreet. 
+                                        Phasellus in quam laoreet, viverra lacus ut, 
+                                        ultrices velit.
+                                    </p>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./assets/idea.png" alt="idea">
+                                <div>
+                                    <h3>Inovative ideas</h3>
+                                    <p>
+                                        Quisque luctus, quam eget molestie commodo, 
+                                        lacus purus cursus purus, nec rutrum tellus dolor 
+                                        id lorem.
+                                    </p>
+                                </div>
+                            </li>   
+                            <li>
+                                <img src="./assets/heart.png" alt="heart">
+                                <div>
+                                    <h3>Love is Answer</h3>
+                                    <p>
+                                        Nulla sed nunc et tortor luctus faucibus.
+                                        Morbi at aliquet turpis, 
+                                        et consequat felis.
+                                        Quisque condimentum.
+                                    </p>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./assets/phone.png" alt="phone">
+                                <div>
+                                    <h3>Responsive Layout</h3>
+                                    <p>
+                                        Sed porttitor placerat rhoncus. 
+                                        In at nunc tellus. 
+                                        Maecenas blandit nunc ligula. 
+                                        Praesent elit leo.
+                                    </p>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./assets/chat.png" alt="chat">
+                                <div>
+                                    <h3>24/7 Support</h3>
+                                    <p>
+                                        Vivamus vel quam lacinia, 
+                                        tincidunt dui non, 
+                                        vehicula nisi. 
+                                        Nulla a sem erat. 
+                                        Pellentesque egestas venenatis lorem .
+                                    </p>
+                                </div>
+                            </li>
+                            <li>
+                                <img src="./assets/star.png" alt="star">
+                                <div>
+                                    <h3>Feel Like A Star</h3>
+                                    <p>
+                                        Quisque hendrerit purus dapibus, 
+                                        ornare nibh vitae, viverra nibh. 
+                                        Fusce vitae aliquam tellus.
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="service_section">
-                    <ul class="service_section-list">
+            </section>
+            <section class="portfollio_section">
+                <div class="portfollion_container">
+                    <h2>Portfolio</h2>
+                    <p>
+                        Duis mollis, est non commodo luctus,
+                        nisi erat porttitor ligula, eget lacinia 
+                        odio sem nec elit.
+                    </p>
+                    <ul class="portfollio_navigation-buttons">
+                        <li class="portfollio_navigation-buttons-all">
+                            <a href="#">All</a> 
+                        </li>
+                        <li class="portfollio_navigation-buttons-design">
+                           <a href="#">Web Design</a> 
+                        </li>
+                        <li class="portfollio_navigation-buttons-graphic">
+                           <a href="#">Graphic Design</a> 
+                        </li>
+                        <li class="portfollio_navigation-buttons-artwork">
+                           <a href="#">Artwork</a>
+                        </li>
+                    </ul>
+                    <ul class="portfollio_work-samples">
                         <li>
-                            <img src="./assets/pen.png" alt="Pen">
-                            <div>
-                                <h3>Custom Design</h3>
-                                <p>
-                                    Curabitur vestibulum eget mauris quis laoreet. 
-                                    Phasellus in quam laoreet, viverra lacus ut, 
-                                    ultrices velit.
-                                </p>
-                            </div>
+                            <img src="./assets/sheap.png" alt="sheap">
                         </li>
                         <li>
-                            <img src="./assets/idea.png" alt="idea">
-                            <div>
-                                <h3>Inovative ideas</h3>
-                                <p>
-                                    Quisque luctus, quam eget molestie commodo, 
-                                    lacus purus cursus purus, nec rutrum tellus dolor 
-                                    id lorem.
-                                </p>
-                            </div>
-                        </li>   
-                        <li>
-                            <img src="./assets/heart.png" alt="heart">
-                            <div>
-                                <h3>Love is Answer</h3>
-                                <p>
-                                    Nulla sed nunc et tortor luctus faucibus.
-                                    Morbi at aliquet turpis, 
-                                    et consequat felis.
-                                    Quisque condimentum.
-                                </p>
-                            </div>
+                            <img src="./assets/girl.png" alt="girl">
                         </li>
                         <li>
-                            <img src="./assets/phone.png" alt="phone">
-                            <div>
-                                <h3>Responsive Layout</h3>
-                                <p>
-                                    Sed porttitor placerat rhoncus. 
-                                    In at nunc tellus. 
-                                    Maecenas blandit nunc ligula. 
-                                    Praesent elit leo.
-                                </p>
-                            </div>
+                            <img src="./assets/bigcity.png" alt="city">
                         </li>
                         <li>
-                            <img src="./assets/chat.png" alt="chat">
-                            <div>
-                                <h3>24/7 Support</h3>
-                                <p>
-                                    Vivamus vel quam lacinia, 
-                                    tincidunt dui non, 
-                                    vehicula nisi. 
-                                    Nulla a sem erat. 
-                                    Pellentesque egestas venenatis lorem .
-                                </p>
-                            </div>
+                            <img src="./assets/robotlove.png" alt="robbot">
                         </li>
                         <li>
-                            <img src="./assets/star.png" alt="star">
-                            <div>
-                                <h3>Feel Like A Star</h3>
-                                <p>
-                                    Quisque hendrerit purus dapibus, 
-                                    ornare nibh vitae, viverra nibh. 
-                                    Fusce vitae aliquam tellus.
-                                </p>
-                            </div>
+                            <img src="./assets/monsters1.png" alt="monsters">
+                        </li>
+                        <li>
+                            <img src="./assets/city.png" alt="citybox">
+                        </li>
+                        <li>
+                            <img src="./assets/robbots.png" alt="robbots">
+                        </li>
+                        <li>
+                            <img src="./assets/birds.png" alt="birds">
+                        </li>
+                        <li>
+                            <img src="./assets/monstercity.png" alt="monstercity">
+                        </li>
+                        <li>
+                            <img src="./assets/boombox.png" alt="boombox">
+                        </li>
+                        <li>
+                            <img src="./assets/crazymonster.png" alt="crazymonster">
+                        </li>
+                        <li>
+                            <img src="./assets/oldsensor.png" alt="oldsensor">
                         </li>
                     </ul>
                 </div>
-            </div>
+                <div class="bottom_line"></div>
+            </section>
+            <section class="about_us-container">
+                <h2>About Us</h2>
+                <p class="about_us-description">
+                    Fusce dapibus, tellus ac cursus commodo, 
+                    tortor mauris condimentum. Duis mollis, 
+                    non commodo luctus, nisi erat porttitor 
+                    ligula, eget lacinia odio sem nec elit. 
+                    Fusce dapibus, tellus ac cursus commodo, 
+                    tortor mauris condimentum nibh.
+                </p>
+                <ul class="about_us-people">
+                    <li>
+                        <img src="./assets/adam.png" 
+                        alt="adam">
+                        <h3>Adam Jensen</h3>
+                        <p>
+                            Quisque luctus, quam eget molestie 
+                            commodo, lacus purus cursus purus, 
+                            nec rutrum tellus dolor id lorem.
+                        </p>
+                        <div>
+                            <a href="#">
+                                <img src="./assets/facebook.png" 
+                                alt="facebook">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/google.png"
+                                alt="google">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/twitter.png" 
+                                alt="twitter">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/linkedin.png" 
+                                alt="linkedin">
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="./assets/desmond1.png" alt="desmond1">
+                        <h3>Desmond Miles</h3>
+                        <p>
+                            Curabitur vestibulum eget mauris 
+                            quis laoreet. Phasellus in quam 
+                            laoreet, viverra lacus ut, 
+                            ultrices velit.
+                        </p>
+                        <div>
+                            <a href="#">
+                                <img src="./assets/facebook.png" 
+                                alt="facebook">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/google.png"
+                                alt="google">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/twitter.png" 
+                                alt="twitter">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/linkedin.png" 
+                                alt="linkedin">
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="./assets/scolara.png" alt="scolara">
+                        <h3>Scolara Visari</h3>
+                        <p>
+                            Nulla sed nunc et tortor luctus 
+                            faucibus. Morbi at aliquet turpis, 
+                            et consequat felis. 
+                            Quisque condimentum.
+                        </p>
+                        <div>
+                            <a href="#">
+                                <img src="./assets/facebook.png" 
+                                alt="facebook">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/google.png"
+                                alt="google">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/twitter.png" 
+                                alt="twitter">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/linkedin.png" 
+                                alt="linkedin">
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+
         </footer>
     </body>
 </html>
