Add: about us section

--- a/singolo2.html
+++ b/singolo2.html
@@ -71,6 +71,105 @@
                 </div>
                 <div class="bottom_line"></div>
             </section>
+            <section class="about_us-container">
+                <div class="about_us-section">
+                    <h2>About Us</h2>
+                    <p class="about_us-description">
+                        Fusce dapibus, tellus ac cursus commodo, 
+                        tortor mauris condimentum. Duis mollis, 
+                        non commodo luctus, nisi erat porttitor 
+                        ligula, eget lacinia odio sem nec elit. 
+                        Fusce dapibus, tellus ac cursus commodo, 
+                        tortor mauris condimentum nibh.
+                    </p>
+                    <ul class="about_us-people">
+                        <li>
+                            <img src="./assets/adam.png" 
+                            alt="adam">
+                            <h3>Adam Jensen</h3>
+                            <p>
+                                Quisque luctus, quam eget molestie 
+                                commodo, lacus purus cursus purus, 
+                                nec rutrum tellus dolor id lorem.
+                            </p>
+                            <div>
+                                <a href="#">
+                                    <img src="./assets/facebook.png" 
+                                    alt="facebook">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/google.png"
+                                    alt="google">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/twitter.png" 
+                                    alt="twitter">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/linkedin.png" 
+                                    alt="linkedin">
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./assets/desmond1.png" alt="desmond1">
+                            <h3>Desmond Miles</h3>
+                            <p>
+                                Curabitur vestibulum eget mauris 
+                                quis laoreet. Phasellus in quam 
+                                laoreet, viverra lacus ut, 
+                                ultrices velit.
+                            </p>
+                            <div>
+                                <a href="#">
+                                    <img src="./assets/facebook.png" 
+                                    alt="facebook">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/google.png"
+                                    alt="google">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/twitter.png" 
+                                    alt="twitter">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/linkedin.png" 
+                                    alt="linkedin">
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="./assets/scolara.png" alt="scolara">
+                            <h3>Scolara Visari</h3>
+                            <p>
+                                Nulla sed nunc et tortor luctus 
+                                faucibus. Morbi at aliquet turpis, 
+                                et consequat felis. 
+                                Quisque condimentum.
+                            </p>
+                            <div>
+                                <a href="#">
+                                    <img src="./assets/facebook.png" 
+                                    alt="facebook">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/google.png"
+                                    alt="google">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/twitter.png" 
+                                    alt="twitter">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/linkedin.png" 
+                                    alt="linkedin">
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+              </section>              
         </main>
     </body>
 </html>
