Add: Singolo DOM & singolo responsive, form with modal window slider, media rules for task Singolo responsive

--- a/index.html
+++ b/index.html
@@ -7,8 +7,33 @@
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div id="burger-menu_section" class="burger-menu_section close-slide_menu">
+            <div id="burger-menu_slider" class="burger-menu_slider">
+                <div class="burger-menu_slider-header">
+                    <figure id="burger-menu_vertical" class="vertical-burger-menu">
+                        <img  src="./assets/Burger-menu-icon-vertical.svg" alt="burger-menu">
+                    </figure>
+                    <div class="burger-logo_name">
+                        <h1>SINGOLO</h1>
+                        <div>*</div>
+                    </div>
+                </div>
+                <div class="burger-menu_navigation">
+                    <ul class="burger-menu_list">
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">SERVICES</a></li>
+                        <li><a href="#">PORTFOLIO</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
         <header class="navigation_section">
             <nav class="navigation_container"> 
+                <figure class="horizontal-burger-menu">
+                    <img id="burger-menu" class="burger-menu__image" src="./assets/Burger-menu-icon.svg" alt="burger-menu">
+                </figure>
                 <div class="logo_name">
                     <h1>SINGOLO</h1>
                     <div>*</div>
@@ -16,7 +41,7 @@
                 <ul id="menu" class="navigation_list">
                     <li><a class="navigation_list-active" href="#">HOME</a></li>
                     <li><a href="#service_box">SERVICES</a></li>
-                    <li><a href="#portfollion_container">PORTFOLIO</a></li>
+                    <li><a href="#portfollio_container">PORTFOLIO</a></li>
                     <li><a href="#about_us-container">ABOUT</a></li>
                     <li class="navigation_list-home"><a href="#quote-section">CONTACT</a></li>
                 </ul>
@@ -25,7 +50,7 @@
         <main>
             <section class="main_section-slides">
                 <figure class="left_arrow_section">
-                    <img id="left-arrow" src="./assets/chev.png" alt="chev" class="main-section_left-arrow">
+                    <img id="left-arrow"  src="./assets/chev.png" alt="chev" class="main-section_left-arrow">
                 </figure>
                 <figure id="firstFigure" class="main-section-phones">
                     <img id="leftPhone" 
@@ -136,7 +161,7 @@
                 </div>
             </section>
             <section class="portfollio_section">
-                <div id='portfollion_container' class="portfollion_container">
+                <div id='portfollio_container' class="portfollio_container">
                     <h2>Portfolio</h2>
                     <p>
                         Duis mollis, est non commodo luctus,
@@ -145,16 +170,16 @@
                     </p>
                     <ul id="portfollio"  class="portfollio_navigation-buttons">
                         <li class="portfollio_navigation-buttons-all">
-                            <a href="#portfollion_container">All</a> 
+                            <a href="#portfollio_container">All</a> 
                         </li>
                         <li class="portfollio_navigation-buttons-design">
-                           <a href="#portfollion_container">Web Design</a> 
+                           <a href="#portfollio_container">Web Design</a> 
                         </li>
                         <li class="portfollio_navigation-buttons-graphic">
-                           <a href="#portfollion_container">Graphic Design</a> 
+                           <a href="#portfollio_container">Graphic Design</a> 
                         </li>
                         <li class="portfollio_navigation-buttons-artwork">
-                           <a href="#portfollion_container">Artwork</a>
+                           <a href="#portfollio_container">Artwork</a>
                         </li>
                     </ul>
                     <ul class="portfollio_work-samples">
